# triathlon-app

./: .gitignore  README.md
triathlon-backend/: README.md  build.sh  init_db.py  pyproject.toml  requirements.txt  setup_database.py
triathlon-backend/app/: database.py  main.py
triathlon-backend/app/models/: __init__.py  competition.py  flexible_sensor_data.py  sensor_data.py  user.py
triathlon-backend/app/repositories/: __init__.py  sensor_repository.py  user_repository.py
triathlon-backend/app/routers/: __init__.py  admin.py  auth.py  competition.py  data.py  feedback.py  multi_sensor_upload.py  user_data.py
triathlon-backend/app/routers/admin/: __init__.py  batches.py  competitions.py  data_uploads.py  import_user.py  mappings.py  old.old  stats.py  (+4 more)
triathlon-backend/app/schemas/: __init__.py  auth.py  feedback.py  sensor_data.py  user.py
triathlon-backend/app/services/: __init__.py  csv_service.py  export_service.py  flexible_csv_service.py
triathlon-backend/app/utils/: __init__.py  dependencies.py  security.py
triathlon-backend/data/: triathlon.db-journal
triathlon-backend/sample_race_records/: race_records_comp_2025_001_long.csv  race_records_comp_2025_001_sprint.csv  race_records_comp_2025_001_standard.csv  race_records_comp_2025_002_long.csv  race_records_comp_2025_002_sprint.csv  race_records_comp_2025_002_standard.csv  race_records_comp_2025_003_long.csv  race_records_comp_2025_003_sprint.csv  race_records_comp_2025_003_standard.csv
triathlon-backend/scripts/: recreate_database.py
triathlon-backend/uploads/csv/: sample_sensor_mapping.csv
(+82 files in other folders)
