requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triathlon-sensor-backend"
version = "0.1.0"
description = "Triathlon Sensor Data Feedback System Backend"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]